--- a/crab_pulsar_timing.ipynb
+++ b/crab_pulsar_timing.ipynb
@@ -423,6 +423,7 @@
     }
    ],
    "source": [
+    "# plot of time derivative of angular frequency. Glicthes in angular frequency are difficult to visualise for crab pulsar\n",
     "fig, ax = plt.subplots(figsize=(15, 8))\n",
     "ax.plot(Time(out_c[2], format='mjd').datetime, 2*np.pi*out_c[1], 'b.', markersize=5, mew=0.1, mec='k')\n",
     "for i in [55875.49, 57839.8, 58064.555, 58237.357, 58470.7, 58687.565]: # recorded  glitches (red)\n",
